@@ -49,7 +49,19 @@ __END__
 =head1 DESCRIPTION
 
 This module acts exactly like L<Log::Dispatch::File> except that it
-obtains an exclusive lock on the file before writing to it.
+obtains an exclusive lock on the file while opening it.
+
+=head1 CAVEATS
+
+B<DANGER!> Use very carefully in multi-process environments. Because the lock
+is obtained at file open time, not at write time, you may experience deadlocks
+in your system.  You should also seriously consider using the
+C<close_after_write> option.  The C<syswrite> option might also be a reasonable
+alternative to using this module (see L<Log::Dispatch::File>).
+
+=head1 SEE ALSO
+
+L<perlfunc/flock>
 
 =cut
 
